--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: mdtools_uibcdf
+  name: pytools_uibcdf
   version: 0.1
 
 source:
@@ -15,15 +15,18 @@ requirements:
 
   run:
     - python
-    - copy
     - numpy
-    - mdtraj
+    - pandas
+    - natsort
+    - multiprocessing
+    - pprint
+    - csv
 
 about:
   home: https://uibcdf.org
   license: MIT License
   summary: ""
   description: |
-    This library provides some useful classes, functions, pipes and wrappers daily used in the uibcdf lab when Molecular Dynamics trajectories, or just molecular systems with coordinates, are manipulated.
-  dev_url: https://github.com/uibcdf/MDLab_uibcdf
+    This library provides some useful python home made tools (functions, pipes and wrappers) useful for the daily work in the uibcdf lab.
+  dev_url: https://github.com/uibcdf/PyTools_uibcdf
   doc_url: https://uibcdf.org
