--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -1,12 +1,12 @@
 package:
   name: pytools_uibcdf
-  version: 0.1
+  version: 0.0.1
 
 source:
   path: ../../
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -24,6 +24,6 @@ about:
   license: MIT License
   summary: ""
   description: |
-    This library provides some useful python home made tools (functions, pipes and wrappers) useful for the daily work in the uibcdf lab.
+    This library provides some useful python home-made tools and shortcuts (functions, pipes and wrappers) useful for the daily work in the uibcdf lab.
   dev_url: https://github.com/uibcdf/PyTools_uibcdf
   doc_url: https://uibcdf.org
